--- a/src/App.css
+++ b/src/App.css
@@ -20,11 +20,13 @@ header {
   text-align: center;
   font-family: 'Noto Serif Khitan Small Script', sans-serif;
 }
-header .container-fluid{
+
+header .container-fluid {
   margin: 0;
   padding: 0;
 }
-.container-fluid .laptop{
+
+.container-fluid .laptop {
   background-color: var(--black);
   display: flex;
   width: 100%;
@@ -126,10 +128,11 @@ header .logo-center p {
 }
 
 /* Updated styles for mobile responsiveness */
-.mobile{
+.mobile {
   margin: 0;
   padding: 0;
 }
+
 .mobile .navbar {
   width: 100%;
   position: fixed;
@@ -195,7 +198,7 @@ header .logo-center p {
   .mobile .navbar-item {
     padding: 10px;
     color: #fff;
-    
+
   }
 
   .mobile .navbar-toggle {
@@ -203,7 +206,7 @@ header .logo-center p {
   }
 }
 
-.mobile .navbar .navbar-items a{
+.mobile .navbar .navbar-items a {
   text-decoration: none;
 }
 
@@ -216,30 +219,36 @@ header .logo-center p {
   text-align: center;
 }
 
-.home-container .intro{
+.home-container .intro {
   margin: 20px 0;
   padding-bottom: 20px;
 }
-.home-container .intro .read-button{
+
+.home-container .intro .read-button {
   display: flex;
   width: 100%;
 }
-.home-container .intro .read-button .btn{
+
+.home-container .intro .read-button .btn {
   width: 20%;
   margin-bottom: 20px;
 }
-@media (max-width: 480px){
-  .home-container{
+
+@media (max-width: 480px) {
+  .home-container {
     margin: 10px 20px;
     padding: 30px 10px;
   }
-  .home-container .intro .read-button .btn{
+
+  .home-container .intro .read-button .btn {
     width: 100%;
   }
 }
-.home-container .intro .intro-content{
+
+.home-container .intro .intro-content {
   margin-top: 20px;
 }
+
 .home-container .intro h2 {
   font-size: 40px;
 }
@@ -249,11 +258,13 @@ header .logo-center p {
   font-size: 18px;
   font-family: 'Noto Serif Khitan Small Script', sans-serif;
 }
-.home-container .intro ul{
+
+.home-container .intro ul {
   list-style: none;
   text-align: left;
   font-size: 18px;
 }
+
 /* Benefits */
 .carousel-container {
   display: flex;
@@ -330,6 +341,244 @@ header .logo-center p {
 }
 
 
+/* Brand */
+
+/* .why {
+  padding: 0 20px 90px;
+}
+
+.whyTitle {
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 140%;
+  margin: 0;
+}
+
+.whyHead{
+  width: 100%;
+}
+.whyList{
+  width: 100%;
+}
+.whyListTitle {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 120%;
+  margin-bottom: 8px;
+}
+
+.whyTitle span:first-of-type {
+  background-color: black;
+  color: var(--gold);
+  padding-bottom: 6px;
+}
+
+.whyTitle span {
+  padding: 0 32px;
+  border-radius: 12px;
+  margin-right: 15px;
+}
+
+.whyTitle span:last-of-type {
+  background-color: var(--gold);
+  font-family: 'Laila', sans-serif;
+  padding: 0 10px;
+}
+
+.whyListItem {
+  display: grid;
+  grid-template-columns: 32px auto;
+  column-gap: 12px;
+  margin-bottom: 24px;
+}
+
+.whyListItemTitle {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 160%;
+}
+
+.whyListItemBody {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 160%;
+  grid-column: 2/3;
+}
+
+@media (max-width: 800px) {
+  .whyTitle {
+    font-size: 36px;
+  }
+} */
+
+/* .why {
+  padding: 0 20px 90px;
+}
+
+.whyInner {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 20px;
+  align-items: center;
+}
+
+.whyTitle {
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 140%;
+  margin: 0;
+}
+
+.whyTitle span {
+  padding: 0 32px;
+  border-radius: 12px;
+  margin-right: 15px;
+}
+
+.whyTitle span:first-of-type {
+  background-color: black;
+  color: var(--gold);
+  padding-bottom: 6px;
+}
+
+.whyTitle span:last-of-type {
+  background-color: var(--gold);
+  font-family: 'Laila', sans-serif;
+  padding-right: 16px;
+}
+
+.whyList {}
+
+.whyListTitle {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 120%;
+  margin-bottom: 8px;
+}
+
+.whyListTitle span {
+  font-family: 'Laila', sans-serif;
+  font-weight: 700;
+  font-size: 47px;
+  line-height: 1;
+}
+
+.whyListItem {
+  display: grid;
+  grid-template-columns: 32px auto;
+  column-gap: 12px;
+  margin-bottom: 24px;
+}
+
+.whyListItem:last-of-type {
+  margin-bottom: 0;
+}
+
+.whyListItemIcon {
+  margin-top: 3px;
+}
+
+.whyListItemTitle {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 160%;
+}
+
+.whyListItemBody {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 160%;
+  grid-column: 2/3;
+}
+
+@media (max-width: 800px) {
+  .why {
+    padding: 0 24px 48px;
+  }
+
+  .whyInner {
+    grid-template-columns: 1fr;
+    row-gap: 48px;
+  }
+
+  .whyTitle {
+    font-size: 36px;
+  }
+
+  .whyTitle span {
+    padding: 0 24px;
+  }
+
+  .whyTitle span:first-of-type {
+    padding-bottom: 5px;
+  }
+
+  .whyListItemIcon {
+    margin-top: -2px;
+  }
+
+  .whyTitle svg {
+    width: 79px;
+  }
+
+  .whyListItemTitle {
+    font-size: 20px;
+    line-height: 140%;
+  }
+
+  .whyListItemBody {
+    font-size: 16px;
+    line-height: 160%;
+  }
+
+  .whyListItemBody br {
+    display: none;
+  }
+} */
+
+.why {
+  padding: 90px 0;
+}
+.why .whyInner{
+  text-align: left;
+}
+
+.why .whyInner .whyList{
+  background-color: var(--gold);
+  height: 500px;
+}
+.why .whyInner .whyHead .whyTitle {
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 140%;
+  margin: 0;
+}
+.whyTitle span {
+  padding: 0 32px;
+  border-radius: 12px;
+  margin-right: 15px;
+}
+.whyTitle span:first-of-type {
+  background-color: var(--black);
+  color: var(--gold);
+  padding-bottom: 6px;
+}
+.whyTitle span:last-of-type {
+  background-color: var(--gold);
+  font-family: 'Laila', sans-serif;
+  padding-right: 16px;
+}
+@media (max-width: 1024px) {
+  .why .whyInner .whyHead .whyTitle {
+    font-size: 45px;
+  }
+}
+@media (max-width: 800px) {
+  .why .whyInner .whyHead .whyTitle {
+    font-size: 36px;
+  }
+}
 
 
 /* FOOTER SECTION  */
@@ -339,7 +588,7 @@ footer {
   text-align: center;
 }
 
-.container {
+footer .container {
   padding: 20px 40px;
 }
 
@@ -375,6 +624,7 @@ footer {
   .mobile {
     visibility: visible;
   }
+
   .container .footer-connect .social-icons {
     display: flex;
     padding-left: 75px;
