--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Laila:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap');
+
 :root {
   --sale: #F65B5B;
   --black: #000000;
@@ -14,9 +17,11 @@
   margin: 0;
   padding: 0;
 }
-
+body{
+  font-family: 'Raleway',sans-serif;
+}
 header {
-  background-color: var(--black);
+  /* background-color: var(--black); */
   text-align: center;
   font-family: 'Noto Serif Khitan Small Script', sans-serif;
 }
@@ -27,7 +32,7 @@ header .container-fluid {
 }
 
 .container-fluid .laptop {
-  background-color: var(--black);
+  background-color: white;
   display: flex;
   width: 100%;
   position: fixed;
@@ -36,14 +41,16 @@ header .container-fluid {
 }
 
 .container-fluid .header-links-laptop {
-  text-align: right;
+  text-align: center;
+  padding-top: 10px;
   box-sizing: border-box;
 }
 
 .container-fluid .header-links-laptop a {
-  color: white;
+  color: var(--black);
   padding: 10px;
-  font-size: 20px;
+  font-size: 22px;
+  font-family: 'Raleway',sans-serif;
 }
 
 .container-fluid .laptop-logo {
@@ -53,24 +60,13 @@ header .container-fluid {
 }
 
 .container-fluid .laptop-logo h2 {
-  color: white;
+  /* color: white; */
   margin-left: 22px;
+  padding-top: 10px;
+  font-family: 'Laila',sans-serif;
 }
 
-header .logo-center {
-  padding-top: 80px;
-  display: inline-block;
-  color: white;
-}
 
-header .logo-center img,
-h2 {
-  margin-bottom: 20px;
-}
-
-header .logo-center p {
-  margin-bottom: 40px;
-}
 
 
 
@@ -81,7 +77,7 @@ header .logo-center p {
 #benefitsInner {
   display: flex;
   justify-content: space-between;
-  padding: 4px 30px;
+  padding: 80px 30px 4px;
 }
 
 .benefitItem {
@@ -107,7 +103,7 @@ header .logo-center p {
     grid-template-columns: 1fr 1fr;
     column-gap: 18px;
     row-gap: 4px;
-    padding: 6px 6px;
+    padding: 85px 6px 6px;
     width: min-content;
     overflow-y: auto;
     max-width: 100vw;
@@ -138,16 +134,15 @@ header .logo-center p {
   position: fixed;
   display: flex;
   justify-content: space-between;
-  background-color: #000000;
-  color: #fff;
+  background-color: white;
+  color: var(--black);
   z-index: 2;
-  padding: 10px 20px;
+  padding: 5px 15px;
   /* Ensure the navbar stays on top of the blurred background */
 }
 
-.mobile .navbar-logo {
-  font-size: 24px;
-  font-weight: bold;
+.mobile .navbar-home a{
+  color: var(--black);
 }
 
 .mobile .navbar-items {
@@ -165,8 +160,27 @@ header .logo-center p {
   display: none;
   cursor: pointer;
 }
+.mobile .navbar-head h2{
+  padding-top: 15px;
+  font-family: 'Laila',sans-serif;
+}
 
-
+.mobile .navbar .menu-icon::after{
+  content: "MENU";
+  font-size: 10px;
+  font-weight: bold;
+  position: absolute;
+  bottom: 10px;
+  left: 18px;
+}
+.mobile .navbar .navbar-home::after{
+  content: "HOME";
+  font-size: 10px;
+  font-weight: bold;
+  position: absolute;
+  bottom: 10px;
+  right: 16px;
+}
 /* Updated styles for mobile responsiveness */
 @media (max-width: 768px) {
 
@@ -176,7 +190,7 @@ header .logo-center p {
     align-items: center;
     width: 60%;
     height: 100vh;
-    background-color: #000000;
+    background-color: white;
     position: absolute;
     top: 56px;
     left: 0;
@@ -197,12 +211,18 @@ header .logo-center p {
 
   .mobile .navbar-item {
     padding: 10px;
-    color: #fff;
+    color: var(--black);
 
+  }
+  .intro .visible .logo p {
+    font-size: 12px;
   }
 
   .mobile .navbar-toggle {
     display: block;
+  }
+  .mobile .navbar-head h2{
+    font-size: 30px;
   }
 }
 
@@ -216,22 +236,36 @@ header .logo-center p {
 .home-container {
   margin: 25px 40px;
   padding: 30px;
-  text-align: center;
+}
+/* VISIBLE  */
+.intro {
+  padding: 55px 70px;
 }
 
-.home-container .intro {
-  margin: 20px 0;
-  padding-bottom: 20px;
-}
-
-.home-container .intro .read-button {
+.intro .visible .read-button {
   display: flex;
   width: 100%;
 }
+.intro .logo {
+  /* padding-top: 20px; */
+  display: inline-block;
+  text-align: center;
 
-.home-container .intro .read-button .btn {
-  width: 20%;
+  /* color: white; */
+}
+
+.intro .logo img,
+h2 {
   margin-bottom: 20px;
+}
+
+.intro .logo p {
+  margin-bottom: 40px;
+}
+.intro .visible .read-button .btn {
+  width: 50%;
+  margin-bottom: 20px;
+  font-family: 'Raleway',sans-serif;
 }
 
 @media (max-width: 480px) {
@@ -239,31 +273,66 @@ header .logo-center p {
     margin: 10px 20px;
     padding: 30px 10px;
   }
+  .intro {
+    padding: 40px 30px;
+  }
 
-  .home-container .intro .read-button .btn {
+  .intro .visible .read-button .btn {
     width: 100%;
   }
 }
 
-.home-container .intro .intro-content {
+.intro .visible .intro-content {
   margin-top: 20px;
 }
 
-.home-container .intro h2 {
+.intro .visible h2,
+.home-container .about h2 {
   font-size: 40px;
 }
 
-.home-container .intro p {
+.intro .visible p,
+.home-about p {
   text-align: justify;
   font-size: 18px;
   font-family: 'Noto Serif Khitan Small Script', sans-serif;
 }
 
-.home-container .intro ul {
+.intro .visible ul {
   list-style: none;
-  text-align: left;
-  font-size: 18px;
+  font-size: 20px;
 }
+
+.intro .visible .intro-icon{
+  font-size: 30px;
+  margin-right: 20px;
+  color: var(--gold40);
+}
+
+/* ABOUT COLOURX ADVERTISERS */
+
+/* .home-container .about h2{
+  font-weight: bold;
+} */
+.home-container .about{
+  /* text-align: center; */
+  margin-bottom: 20px;
+  padding-bottom: 30px;
+}
+
+.home-container .about span{
+  padding: 0 10px;
+  font-weight: bolder;
+  border-radius: 7px;
+  background-color: var(--gold);
+  white-space: nowrap;
+  font-family: 'Laila', sans-serif;
+}
+/* .home-about p{
+  text-align: justify;
+  font-size: 18px;
+  font-family: 'Noto Serif Khitan Small Script', sans-serif;
+} */
 
 /* Benefits */
 .carousel-container {
@@ -293,6 +362,7 @@ header .logo-center p {
 
 .home-container .offer{
   margin-bottom: 30px;
+  text-align: center;
   padding-bottom: 30px;
 }
 /* CSS Styling for the Card */
@@ -300,6 +370,8 @@ header .logo-center p {
   width: 100%;
   padding: 20px;
   margin-bottom: 20px;
+  color: white;
+  background-color: var(--black);
   /* text-align: justify; */
   border: 1px solid #ccc;
   border-radius: 10px;
@@ -313,11 +385,11 @@ header .logo-center p {
 
 .card h3 {
   margin-top: 10px;
-  color: #333;
+  color: white;
 }
 
 .card p {
-  color: #666;
+  color: white;
 }
 
 /* Brand */
@@ -382,8 +454,9 @@ header .logo-center p {
   font-size: 24px;
   line-height: 160%;
 }
-.why .whyInner .whyList .whyListItem img{
+.why .whyInner .whyList .whyListItem .brand-icon{
   display: block;
+  color: var(--gold);
   height: auto;
   width: 100%;
 }
@@ -456,18 +529,18 @@ footer .container h2{
   .mobile {
     display: none;
   }
-  header .logo-center h2{
+  /* header .logo h2{
     display: none;
-  }
+  } */
 }
 
 @media (max-width: 480px) {
   .container-fluid .laptop {
     display: none;
   }
-  header .logo-center h2{
+  /* header .logo h2{
     visibility: visible;
-  }
+  } */
   .mobile {
     visibility: visible;
   }
