--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Laila:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
 :root {
   --sale: #F65B5B;
@@ -17,9 +17,11 @@
   margin: 0;
   padding: 0;
 }
-body{
-  font-family: 'Raleway',sans-serif;
+
+body {
+  font-family: 'Raleway', sans-serif;
 }
+
 header {
   /* background-color: var(--black); */
   text-align: center;
@@ -35,7 +37,6 @@ header .container-fluid {
   background-color: white;
   display: flex;
   width: 100%;
-  position: fixed;
   justify-content: space-between;
   z-index: 2;
 }
@@ -50,7 +51,7 @@ header .container-fluid {
   color: var(--black);
   padding: 10px;
   font-size: 22px;
-  font-family: 'Raleway',sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 .container-fluid .laptop-logo {
@@ -63,10 +64,8 @@ header .container-fluid {
   /* color: white; */
   margin-left: 22px;
   padding-top: 10px;
-  font-family: 'Laila',sans-serif;
+  font-family: 'Laila', sans-serif;
 }
-
-
 
 
 
@@ -77,7 +76,7 @@ header .container-fluid {
 #benefitsInner {
   display: flex;
   justify-content: space-between;
-  padding: 80px 30px 4px;
+  padding: 4px 30px;
 }
 
 .benefitItem {
@@ -103,7 +102,7 @@ header .container-fluid {
     grid-template-columns: 1fr 1fr;
     column-gap: 18px;
     row-gap: 4px;
-    padding: 85px 6px 6px;
+    padding: 6px 6px;
     width: min-content;
     overflow-y: auto;
     max-width: 100vw;
@@ -131,7 +130,6 @@ header .container-fluid {
 
 .mobile .navbar {
   width: 100%;
-  position: fixed;
   display: flex;
   justify-content: space-between;
   background-color: white;
@@ -141,7 +139,7 @@ header .container-fluid {
   /* Ensure the navbar stays on top of the blurred background */
 }
 
-.mobile .navbar-home a{
+.mobile .navbar-home a {
   color: var(--black);
 }
 
@@ -160,12 +158,13 @@ header .container-fluid {
   display: none;
   cursor: pointer;
 }
-.mobile .navbar-head h2{
+
+.mobile .navbar-head h2 {
   padding-top: 15px;
-  font-family: 'Laila',sans-serif;
+  font-family: 'Laila', sans-serif;
 }
 
-.mobile .navbar .menu-icon::after{
+.mobile .navbar .menu-icon::after {
   content: "MENU";
   font-size: 10px;
   font-weight: bold;
@@ -173,7 +172,8 @@ header .container-fluid {
   bottom: 10px;
   left: 18px;
 }
-.mobile .navbar .navbar-home::after{
+
+.mobile .navbar .navbar-home::after {
   content: "HOME";
   font-size: 10px;
   font-weight: bold;
@@ -181,6 +181,7 @@ header .container-fluid {
   bottom: 10px;
   right: 16px;
 }
+
 /* Updated styles for mobile responsiveness */
 @media (max-width: 768px) {
 
@@ -214,6 +215,7 @@ header .container-fluid {
     color: var(--black);
 
   }
+
   .intro .visible .logo p {
     font-size: 12px;
   }
@@ -221,7 +223,8 @@ header .container-fluid {
   .mobile .navbar-toggle {
     display: block;
   }
-  .mobile .navbar-head h2{
+
+  .mobile .navbar-head h2 {
     font-size: 30px;
   }
 }
@@ -233,12 +236,14 @@ header .container-fluid {
 
 /* HOME SECTION  */
 
-.home-container {
-  margin: 25px 40px;
-  padding: 30px;
-}
+
 /* VISIBLE  */
-.intro {
+.intro,
+.offer-container,
+.about-container,
+.brand-container,
+.service-container,
+.mission-container {
   padding: 55px 70px;
 }
 
@@ -246,6 +251,7 @@ header .container-fluid {
   display: flex;
   width: 100%;
 }
+
 .intro .logo {
   /* padding-top: 20px; */
   display: inline-block;
@@ -262,24 +268,11 @@ h2 {
 .intro .logo p {
   margin-bottom: 40px;
 }
+
 .intro .visible .read-button .btn {
   width: 50%;
   margin-bottom: 20px;
-  font-family: 'Raleway',sans-serif;
-}
-
-@media (max-width: 480px) {
-  .home-container {
-    margin: 10px 20px;
-    padding: 30px 10px;
-  }
-  .intro {
-    padding: 40px 30px;
-  }
-
-  .intro .visible .read-button .btn {
-    width: 100%;
-  }
+  font-family: 'Raleway', sans-serif;
 }
 
 .intro .visible .intro-content {
@@ -287,12 +280,17 @@ h2 {
 }
 
 .intro .visible h2,
-.home-container .about h2 {
+.about-container .about h2,
+.offer-container .offer h2,
+.service-panel h2,
+.mission h2 {
   font-size: 40px;
+  font-weight: 800;
 }
 
 .intro .visible p,
-.home-about p {
+.home-about p,
+.mission p {
   text-align: justify;
   font-size: 18px;
   font-family: 'Noto Serif Khitan Small Script', sans-serif;
@@ -303,24 +301,65 @@ h2 {
   font-size: 20px;
 }
 
-.intro .visible .intro-icon{
+.intro .visible .intro-icon {
   font-size: 30px;
   margin-right: 20px;
   color: var(--gold40);
 }
 
-/* ABOUT COLOURX ADVERTISERS */
+@media (max-width: 480px) {
+  .offer-container {
+    margin: 10px 20px;
+    padding: 30px 10px;
+  }
 
-/* .home-container .about h2{
-  font-weight: bold;
+  .intro,
+  .offer-container,
+  .about-container,
+  .brand-container,
+  .service-container,
+  .mission-container {
+    padding: 40px 30px;
+  }
+
+  .intro .visible .read-button .btn {
+    width: 100%;
+  }
+
+  .intro .visible h2,
+  .about-container .about h2,
+  .offer-container .offer h2,
+  .service-panel h2,
+  .mission h2 {
+    font-size: 36px;
+  }
+}
+
+/* OFFER */
+
+/* .offer-container {
+  margin: 25px 40px;
+  padding: 30px;
 } */
-.home-container .about{
-  /* text-align: center; */
-  margin-bottom: 20px;
+
+.offer-container .offer {
+  margin-bottom: 30px;
+  text-align: center;
   padding-bottom: 30px;
 }
 
-.home-container .about span{
+/* ABOUT COLOURX ADVERTISERS */
+.service-container,
+.about-container {
+  /* text-align: center; */
+  background-color: var(--dark-gray);
+}
+
+.about-container .about{
+   padding: 20px 15px;
+}
+
+.about-container .about span {
   padding: 0 10px;
   font-weight: bolder;
   border-radius: 7px;
@@ -328,6 +367,35 @@ h2 {
   white-space: nowrap;
   font-family: 'Laila', sans-serif;
 }
+/* MISSION */
+.mission h2{
+  position: relative;
+  background-color: var(--gold);
+  width: 60%;
+  font-family: 'Laila', sans-serif;
+  border-radius: 10px;
+  padding: 10px 6px 6px;
+}
+.mission h2::after{
+  content: "";
+  position: absolute;
+  bottom: 6px;
+  left: 6px;
+  height: 2px;
+  width: 40%;
+  background-color: var(--black);
+}
+.mission .mission-content{
+  padding: 10px 30px ;
+}
+@media (max-width: 480px){
+  .mission h2{
+    width: 75%;
+  }
+}
+/* .mission ,.mission-content .mission-icon{
+  padding-left: 10px;
+} */
 /* .home-about p{
   text-align: justify;
   font-size: 18px;
@@ -360,11 +428,7 @@ h2 {
   transform: translateX(-50%);
 }
 
-.home-container .offer{
-  margin-bottom: 30px;
-  text-align: center;
-  padding-bottom: 30px;
-}
+
 /* CSS Styling for the Card */
 .card {
   width: 100%;
@@ -375,6 +439,7 @@ h2 {
   /* text-align: justify; */
   border: 1px solid #ccc;
   border-radius: 10px;
+  /* height: 50vh; */
 }
 
 .card img {
@@ -397,43 +462,52 @@ h2 {
 .why {
   padding: 90px 0;
 }
-.why .whyInner{
+
+.why .whyInner {
   text-align: left;
 }
-.why .whyInner .whyHead{
+
+.why .whyInner .whyHead {
   width: 100%;
 }
+
 .why .whyInner .whyHead .whyTitle {
   font-weight: 700;
   font-size: 60px;
   line-height: 140%;
   margin: 0;
 }
+
 .whyTitle span {
   padding: 0 25px;
   border-radius: 12px;
   margin-right: 5px;
 }
+
 .whyTitle span:first-of-type {
   background-color: var(--black);
   white-space: nowrap;
   color: var(--gold);
   padding-bottom: 6px;
 }
+
 .whyTitle span:last-of-type {
   background-color: var(--gold);
   white-space: nowrap;
   font-family: 'Laila', sans-serif;
   padding-right: 16px;
 }
+
 @media (max-width: 1024px) {
   .why .whyInner .whyHead .whyTitle {
     font-size: 45px;
   }
 }
-.why .whyInner .whyList{
+
+.why .whyInner .whyList {
   margin-top: 20px;
 }
+
 .why .whyInner .whyList .whyListItem {
   display: grid;
   grid-template-columns: 32px auto;
@@ -450,18 +524,20 @@ h2 {
 }
 
 .why .whyInner .whyList .whyListItem .whyListItemTitle {
-  font-weight: 700;
+  font-weight: 900;
   font-size: 24px;
   line-height: 160%;
 }
-.why .whyInner .whyList .whyListItem .brand-icon{
+
+.why .whyInner .whyList .whyListItem .brand-icon {
   display: block;
   color: var(--gold);
   height: auto;
   width: 100%;
 }
+
 .why .whyInner .whyList .whyListItem .whyListItemBody {
-  font-weight: 500;
+  font-weight: 400;
   font-size: 18px;
   line-height: 160%;
   grid-column: 2/3;
@@ -471,9 +547,11 @@ h2 {
   .why {
     padding: 0 24px 48px;
   }
+
   .why .whyInner .whyHead .whyTitle {
     font-size: 32px;
   }
+
   .why .whyInner .whyList .whyListItem .whyListItemIcon {
     margin-top: 2px;
   }
@@ -493,6 +571,24 @@ h2 {
   }
 }
 
+/* Service panel Button */
+.service-panel a {
+  text-decoration: none;
+  color: var(--black);
+}
+
+.service-panel .panel-button {
+  display: flex;
+  justify-content: space-between;
+  /* width: 80%; */
+  background-color: var(--gold);
+  margin: 10px 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+  border-radius: 10px;
+}
+
 
 /* FOOTER SECTION  */
 footer {
@@ -504,9 +600,11 @@ footer {
 footer .container {
   padding: 20px 40px;
 }
-footer .container h2{
+
+footer .container h2 {
   color: var(--gold);
 }
+
 .container .footer-logo .bottomnav a,
 .container .footer-contact a,
 .container .footer-connect a {
@@ -529,6 +627,7 @@ footer .container h2{
   .mobile {
     display: none;
   }
+
   /* header .logo h2{
     display: none;
   } */
@@ -538,6 +637,7 @@ footer .container h2{
   .container-fluid .laptop {
     display: none;
   }
+
   /* header .logo h2{
     visibility: visible;
   } */
