--- a/src/App.css
+++ b/src/App.css
@@ -347,6 +347,16 @@ h2 {
   text-align: center;
   padding-bottom: 30px;
 }
+@media (min-width:800px) {
+  .offer-container .offer .offer-mobile{
+    display: none;
+  }
+}
+@media (max-width:800px) {
+  .offer-container .offer .offer-laptop{
+    display: none;
+  }
+}
 
 /* ABOUT COLOURX ADVERTISERS */
 .service-container,
@@ -627,7 +637,6 @@ footer .container h2 {
   .mobile {
     display: none;
   }
-
   /* header .logo h2{
     display: none;
   } */
