--- a/src/App.css
+++ b/src/App.css
@@ -598,6 +598,7 @@ h2 {
   .why .whyInner .whyList .whyListItem .whyListItemBody {
     font-size: 16px;
     line-height: 160%;
+    padding-right: 30px;
   }
 
   .why .whyInner .whyList .whyListItem .whyListItemBody br {
@@ -819,6 +820,11 @@ footer .container h2 {
     font-size: 20px;
     line-height: 140%;
   }
-
+  .flex-header .head-content{
+    padding: 0 45px;
+  }
+  .uses .usesInner .usesBody p{
+    padding-right: 30px;
+  }
 }
 
